src/test/testData/inspections/typeVariables.elambda
data Data() = Ctr(<error descr="Type variable 'a' undefined">a</error>);
--- references to duplicate variables are not resolved
data Box(a, a) = Box(<error descr="Type variable 'a' undefined">a</error>);
